Add replication test

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,9 +4,9 @@ ProjectName=Third Person Game Template
 
 [/Script/MassSample.MSBoidDevSettings]
 DrawDebugBoxes=False
-NumOfBoids=10000
+NumOfBoids=250
 BoidMaxSpeed=250
-SimulationExtentFromCenter=40000
+SimulationExtentFromCenter=10000
 BoidEntityConfig=/Game/MassSample/MassConfigs/MEC_Boid.MEC_Boid
 StaticMesh=/Game/MassSample/Experimental/SM_ProjectileTracer.SM_ProjectileTracer
 Material=/Game/MassSample/Materials/MI_Boid.MI_Boid
@@ -14,4 +14,7 @@ SeparationWeight=0.500000
 AlignWeight=0.500000
 CohesionWeight=0.500000
 TargetWeight=0.001000
+Static=False
+NetUpdatePrecisionTolerance=2.000000
+BatchesPerUpdate=20
 
