--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,7 +4,7 @@ ProjectName=Third Person Game Template
 
 [/Script/MassSample.MSBoidDevSettings]
 DrawDebugBoxes=False
-NumOfBoids=10000
+NumOfBoids=20000
 BoidMaxSpeed=250
 SimulationExtentFromCenter=10000
 BoidEntityConfig=/Game/MassSample/MassConfigs/MEC_Boid.MEC_Boid
@@ -17,6 +17,6 @@ TargetWeight=0.001000
 Static=False
 NetUpdatePrecisionTolerance=2.000000
 BatchesPerUpdate=20
-UseNiagara=False
+UseNiagara=True
 NiagaraActorClass=BlueprintGeneratedClass'/Game/MassSample/BoidNiagara/BP_BoidNiagaraActor.BP_BoidNiagaraActor_C'
 
